[project]
name = "ValdbjornRanking"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mathias Rønnelund", email = "mat@valdbjorn.com"},
]
dependencies = [
    "discord-py>=2.3.2",
    "python-dotenv>=1.0.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
